Add border on sidebar (remove on header)

https://bugzilla.gnome.org/show_bug.cgi?id=499361