src/file-manager/fm-tree-view.c
@@ -1529,6 +1529,7 @@ fm_tree_view_init (FMTreeView *view)
 					GTK_POLICY_AUTOMATIC);
 	gtk_scrolled_window_set_hadjustment (GTK_SCROLLED_WINDOW (view), NULL);
 	gtk_scrolled_window_set_vadjustment (GTK_SCROLLED_WINDOW (view), NULL);
+	gtk_scrolled_window_set_shadow_type (GTK_SCROLLED_WINDOW (view), GTK_SHADOW_IN);
 	
 	gtk_widget_show (GTK_WIDGET (view));
 
